media query updated - fixed spacing issues

--- a/wds_website/src/stylesheets/scss/_services.scss
+++ b/wds_website/src/stylesheets/scss/_services.scss
@@ -74,10 +74,7 @@
     justify-content: center;
   }
 
-  .photo-container {
-    width: 550px;
-    height:333px;
-  }
+
 
   .align-self-baseline {
     align-self: baseline;
@@ -216,6 +213,7 @@
   .grid-services-1 {
     grid-column: 1/1;
     grid-row: 2;
+
   }
 
   .grid-services-2 {
